name:                adventofcode-2017haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/adventofcode-2017haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  exposed-modules:     Day1
                     , Day2
                     , Day3

test-suite tests
   ghc-options:         -Wall
   default-extensions:  OverloadedStrings
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test, src
   main-is:             Spec.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , hspec
   other-modules:       Day1
                      , Day1Spec
                      , Day2
                      , Day2Spec
                      , Day3
                      , Day3Spec
